# CFO-Direct-Index

./: .env.example  .gitignore  README.md  backtest_results_2025.txt  fidelity_test_output.txt  pyproject.toml  run_2025_backtest.py  run_full_2025_backtest.py  transactions (4).csv  transactions (4).xlsx  vercel.json
.github/workflows/: daily-report.yml
config/: api_keys.yaml.example
dashboard/: dashboard.js  index.html  styles.css
dashboard/data/: portfolio.json
data/portfolios/forward_10mm/: snapshots.csv  state.json
data/sample/: portfolio_config.yaml  prices.csv  sp500_constituents.csv
outputs/backtest_2025-01-02_2025-01-31_242c2965/: metrics.json  portfolio_daily.csv  professional_report.html  run_report.md  trades.csv
scripts/: daily_runner.py  generate_dashboard_data.py  initialize_forward_portfolio.py  run_dashboard_server.py  send_daily_email.py  verify_weights.py
src/di_pilot/: __init__.py  cli.py  config.py  gui.py  models.py
src/di_pilot/analytics/: __init__.py  drift.py  pnl.py  tlh.py
src/di_pilot/data/: __init__.py  fidelity_import.py  loaders.py  schemas.py  sectors.py  tlh_pairs.py
src/di_pilot/email_reports/: __init__.py  generator.py  sender.py
src/di_pilot/logging/: __init__.py  decision_log.py
src/di_pilot/portfolio/: __init__.py  holdings.py  initialize.py  valuation.py
src/di_pilot/scripts/: preload_data.py
src/di_pilot/simulation/: __init__.py  backtest.py  engine.py  (+4 more)
tests/: __init__.py  conftest.py  test_drift.py  test_eodhd_provider.py  test_initialize.py  test_simulation.py  test_tlh.py  test_valuation.py
(+8 files in other folders)
